# warp3d

./: .gitignore  CMakeLists.txt  warp3d_script_linux_hybrid  warp3d_script_linux_openmp
example_problems_threads/: test_74
src/: CMakeLists.txt  README  adapt_check.f  addifv.f  addmas.f  allocate_damage.f  allocate_load.f  aplacc.f  assemble_code.f  bdbt.f  blcmp1.f  bmod.f  chk_stp_reduce.f  chk_stp_reduce_cohes.f  chk_stp_reduce_ctoa.f  chk_stp_reduce_gurson.f  chk_stp_reduce_smcs.f  chkcrack.f  chkcrack_cohesive.f  chkcrack_ctoa.f  chkcrack_gurson.f  chkcrack_smcs.f  cmpmas.f  cohes_elem.f  common.main  comput.f  con_dump.f  contact.f  cpu_time.f  cvtest.f  defines.h  derivs.f  di1dsf.f  dicmj.f  didriv.f  dielem_a.f  dielem_b.f  dielem_c.f  diexp4.f  difrar.f  (+217 more)
verification/test14/: energy
verification/test67/: test_67b
verification/test74/: check_74a.perl  check_74b.perl  test_74
verification/test82/mts_model/: check.perl  warp3d_mts.inp
verification/test82/mts_model_multiple_crystals/: check.perl  warp3d_mts_multi.inp
verification/test82/ornl_model/: check.perl
